loops, variables, ops

--- a/index.html
+++ b/index.html
@@ -37,17 +37,12 @@
         //         const b=90;
         //        console.log(b)
         //     }
- bcdhbvbvbvbfbvvbvbfvbfv
-
-
-        
- 
-        
-
-
     </script>
  
     <!-- <script defer src="./variable.js"></script> -->
+    <!-- <script src="./datatypes.js"></script> -->
+    <!-- <script src="./operators.js"></script> -->
+    <script src="./for.js"></script>
 </head>
 
 <body>
