till string addded

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <!-- <script defer src="./variable.js"></script> -->
     <!-- <script src="./datatypes.js"></script> -->
     <!-- <script src="./operators.js"></script> -->
-    <script src="./for.js"></script>
+    <!-- <script src="./for.js"></script> -->
+    <script src="./functions.js"></script>
 </head>
 
 <body>
