--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <!-- <script src="./datatypes.js"></script> -->
     <!-- <script src="./operators.js"></script> -->
     <!-- <script src="./for.js"></script> -->
-    <script src="./functions.js"></script>
+    <!-- <script src="./functions.js"></script> -->
+    <!-- <script src="./strings.js"></script> -->
+    <script src="./arrays.js"></script>
 </head>
 
 <body>
