--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>JavaScript</title>
+    <style>
+        body{
+            background-color: thistle;
+        }
+    </style>
     <script>
         // console.log("hello")
         // console.log("world")
@@ -45,7 +50,10 @@
     <!-- <script src="./for.js"></script> -->
     <!-- <script src="./functions.js"></script> -->
     <!-- <script src="./strings.js"></script> -->
-    <script src="./arrays.js"></script>
+    <!-- <script src="./arrays.js"></script> -->
+    <!-- <script src="./map_filter_reduce.js"></script> -->
+    <!-- <script src="./practise-5.js"></script> -->
+    <script src="./Guess_the_number.js"></script>
 </head>
 
 <body>
