day's final commit

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <!-- <script src="./for.js"></script> -->
     <!-- <script src="./functions.js"></script> -->
     <!-- <script src="./strings.js"></script> -->
-    <!-- <script src="./arrays.js"></script> -->
+    <script src="./arrays.js"></script>
     <!-- <script src="./map_filter_reduce.js"></script> -->
     <!-- <script src="./practise-5.js"></script> -->
-    <script src="./Guess_the_number.js"></script>
+    <!-- <script src="./Guess_the_number.js"></script> -->
 </head>
 
 <body>
