--- a/index.html
+++ b/index.html
@@ -50,13 +50,28 @@
     <!-- <script src="./for.js"></script> -->
     <!-- <script src="./functions.js"></script> -->
     <!-- <script src="./strings.js"></script> -->
-    <script src="./arrays.js"></script>
+    <!-- <script src="./arrays.js"></script> -->
+    <!-- <script src=".//snake_water_gun.js"></script> -->
     <!-- <script src="./map_filter_reduce.js"></script> -->
     <!-- <script src="./practise-5.js"></script> -->
     <!-- <script src="./Guess_the_number.js"></script> -->
+    <!-- <script src="./dom.js"></script> -->
 </head>
 
 <body>
+    <div>
+        <p>
+            Hello World
+        </p>
+        <span>
+            Sibling of p
+        </span>
+    </div>
+
+
+    <cite>
+        Hello it is last node
+    </cite>
 
 </body>
 
