20 feb noon commmit till timeouts

--- a/index.html
+++ b/index.html
@@ -56,10 +56,14 @@
     <!-- <script src="./practise-5.js"></script> -->
     <!-- <script src="./Guess_the_number.js"></script> -->
     <!-- <script src="./dom.js"></script> -->
+    <!-- <script src="./class.js"></script> -->
+    <!-- <script src="./interval.js"></script> -->
+    <!-- <script src="./browser.js"></script> -->
 </head>
 
 <body>
-    <div>
+    <button id="btn">Click me</button>
+    <!-- <div id="red">
         <p>
             Hello World
         </p>
@@ -71,8 +75,17 @@
 
     <cite>
         Hello it is last node
-    </cite>
+    </cite> -->
 
+
+    <!-- browser events part -->
+    <!-- <div class="container" onmousewheel="console.log('container mai bhai'); document.write('mainpage bhai')">
+        <button onclick="alert
+        ('kem cho!')"></button> -->
+        <!-- <button onmouseout="console.log('Hello guys!!!')"></button> -->
+    <!-- </div> --> 
+
+ 
 </body>
-
+<script src="./browser.js"></script>
 </html>
