--- a/async.html
+++ b/async.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./aync.js"></script>
+    <script src="./assignment-1.js"></script>
+    <!-- <script src="./assignment-2.js"></script> -->
+    <!-- <script src="./aync.js"></script> -->
 </head>
 <body>
     
