--- a/async.html
+++ b/async.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./async-await.js"></script>
+    <!-- <script src="./async-await.js"></script> -->
     <!-- <script src="./promiseAPI.js"></script> -->
     <!-- <script src="./promise_chaining.js"></script> -->
     <!-- <script src="./promises.js"></script> -->
     <!-- <script src="./assignment-1.js"></script> -->
     <!-- <script src="./rest_spread.js"></script> -->
-    <!-- <script src="./assignment-2.js"></script> -->
+    <script src="./assignment-2.js"></script>
     <!-- <script src="./aync.js"></script> -->
 </head>
 <body>
